resources/public/style.css
/* ... */
.emoji-picker .emoji-picker__search {
    padding-left: .5em;
}

.emoji-picker .emoji-picker__preview {
    padding-top: 1.5em 1em;
    border-top: 1px solid #999999;
    border-top: 1px solid var(--emoji-picker-border-color);
}

.emoji-picker .emoji-picker__preview-name {
    color: #666666;
    color: var(--emoji-picker-preview-name-text-color);
}

.emoji-picker .emoji-picker__tab {
    color: inherit;
    color: var(--emoji-picker-tab-icon-color);
}

.emoji-picker .emoji-picker__tab.active {
    color: #4F81E5;
    color: var(--emoji-picker-tab-icon-color-selected);
    border-bottom: 3px solid #4F81E5;
    border-bottom: 3px solid var(--emoji-picker-tab-icon-color-selected);
}

.emoji-picker .emoji-picker__tab-body h2 {
    color: #333333;
    color: var(--emoji-picker-section-text-color);
}

.emoji-picker .emoji-picker__emoji {
    color: inherit;
    color: var(--emoji-picker-emoji-color);
    background: transparent;
    background: var(--emoji-picker-emoji-background);
}

.emoji-picker .emoji-picker__emoji:hover {
    background: #E8F4F9;
    background: var(--emoji-picker-emoji-background-hover);
}

.emoji-picker .emoji-picker__search-container input {
    border: 1px solid #CCCCCC;
    border: 1px solid var(--emoji-picker-search-input-border-color);
    background: #fff;
    background: var(--emoji-picker-search-input-background);
    color: #000;
    color: var(--emoji-picker-search-input-text-color);
}

.emoji-picker .emoji-picker__search-icon {
    color: #CCCCCC;
    color: var(--emoji-picker-search-icon-color);
}

.emoji-picker .emoji-picker__search-not-found {
    color: #666666;
    color: var(--emoji-picker-search-no-results-color);
}

.emoji-picker .emoji-picker__variant-overlay {
    background: rgba(0, 0, 0, 0.7);
    background: var(--emoji-picker-variant-overlay-background);
}

.emoji-picker .emoji-picker__variant-popup {
    background: #FFFFFF;
    background: var(--emoji-picker-variant-popup-background);
}

.emoji-picker .emoji-picker__variant-popup-close-button {
    color: inherit;
    color: var(--emoji-picker-variant-close-button-color)
}

/* CHAT ACTIONS POPUP */

.popup {
    position: absolute;
    z-index: 22;
    border-radius: 5px;
    font-size: 1rem !important;
    line-height: 1rem !important;
    overflow: hidden;
    max-width: 400px;
    min-width: 300px;
}

.popup .details-wrapper {
    width: 65%;
}

.popup .actions-wrapper {
    width: 35%;
    background: #0002;
    background: var(--panel-article-background);
}

.popup .pane {
    display: inline-block;
    vertical-align: top;
}

.popup .pane.pane-full {
    width: 100%;
}

.pane p {
    overflow-wrap: break-word;
    word-wrap: break-word;
    word-break: break-word;
}

.pane ul.actions-list {
    margin: 0;
    padding: 0;
    padding-bottom: .5em;
    list-style: none;
    border-left: 1px solid #000;
    border-left: 1px solid var(--panel-border-color);
}

.pane ul.actions-list li {
    line-height: 2em;
    padding: 0 .5em;
}

.popup-timestamp-header {
    margin: 0;
    padding: 8px 0;
    border-bottom: 1px solid #000;
    border-bottom: 1px solid var(--panel-border-color);
    text-align: center;
}

/* Settings tweaks */
#bubble-position {
    width: 0;
    grid-template: repeat(2, 1fr) / repeat(2, .5fr);
    display: grid;
}

#bubble-position label {
    position: relative;
    width: 55px;
    height: 30px;
}

#bubble-position label > input {
    visibility: hidden;
}

#bubble-position label > div {
    position: absolute;
    top: 0;
    left: 0;
    width: inherit;
    height: inherit;
    border: 1px solid #797979;
}

#bubble-position label:hover > div {
    border: 2px solid #6495ED;
    border: 2px solid var(--option-bubble-position-border-color-hovered);
    background: rgba(0, 0, 0, 0);
    background: var(--option-bubble-position-background-hovered);
}

#bubble-position label input:checked ~ div {
    background: #eee;
    background: var(--option-bubble-position-background-selected);
}

/* Chat settings tweaks */
.chat-settings-wrapper label {
    display: inline-block;
    cursor: pointer;
    user-select: none;
    margin: 6px 0;
}

.chat-settings-wrapper input:not([type=checkbox]) {
    border: 1px solid #888;
}

/* Notifications */
.notification {
    margin: 15px 10px;
}

.notification-body {
    padding: 10px 5px;
    word-break: break-word;
    white-space: pre-wrap;
}

.notification-footer {
    /*
        Fixes a dumb case where a footer containing only float content would have 0 height
        despite being able to lay things out perfectly fine.
        Nobody would even see this anyway - who would post a notification without an author?
    */
    overflow: auto;
}

.notification-footer .notification-expiry {
    cursor: default;
    color: #b66;
    color: var(--notification-expiry-color);
}

/*//////////////////////////*\
| Modal
\*\\\\\\\\\\\\\\\\\\\\\\\\\\*/
/* https://github.com/kylefox/jquery-modal/blob/a8b9c9b01961c0a3c6676fcc8fe6cc5b8c74cb5c/jquery.modal.css */
.blocker {
    z-index: 99;
    padding: 0;
}

.modal {
    z-index: 100;
    width: initial;
    min-width: 10vw;
    max-width: 96vw;
    max-height: 99vh;
    padding: 0;
    outline: 0;
    overflow: hidden;
}

.modal .modal-header, .modal .modal-footer {
    margin: 0;
    min-height: 2em;
}

.modal .modal-body {
    padding: 15px 10px;
    max-width: 98vw;
    max-height: 88vh;
    overflow: auto;
}

/*//////////////////////////*\
| Mobile Styles
\*\\\\\\\\\\\\\\\\\\\\\\\\\\*/

.mobile-only {
    display: none;
}

@media (max-width: 1500px) {
    #donate, #donate > * {
        max-width: 300px;
    }
}
/* ... */

